// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`ng-add.schematic should handle ESM config files 1`] = `
"// @ts-check
import eslint from '@eslint/js';
import tseslint from 'typescript-eslint';
import angular from 'angular-eslint';
import prettier from \\"eslint-config-prettier\\";

export default tseslint.config(
  {
    files: ['**/*.ts'],
    extends: [
      eslint.configs.recommended,
      ...tseslint.configs.recommended,
      ...tseslint.configs.stylistic,
      ...angular.configs.tsRecommended,
    ],
    processor: angular.processInlineTemplates,
    rules: {
      '@angular-eslint/directive-selector': [
        'error',
        {
          type: 'attribute',
          prefix: 'app',
          style: 'camelCase',
        },
      ],
      '@angular-eslint/component-selector': [
        'error',
        {
          type: 'element',
          prefix: 'app',
          style: 'kebab-case',
        },
      ],
    },
  },
  {
    files: ['**/*.html'],
    extends: [
      ...angular.configs.templateRecommended,
      ...angular.configs.templateAccessibility,
    ],
    rules: {},
  },
  prettier
);
"
`;

exports[`ng-add.schematic should work with ESLint flat config files (app) 1`] = `
"// @ts-check
const eslint = require(\\"@eslint/js\\");
const { defineConfig } = require(\\"eslint/config\\");
const tseslint = require(\\"typescript-eslint\\");
const angular = require(\\"angular-eslint\\");
const prettier = require(\\"eslint-config-prettier/flat\\");

module.exports = defineConfig([
  {
    files: [\\"**/*.ts\\"],
    extends: [
      eslint.configs.recommended,
      tseslint.configs.recommended,
      tseslint.configs.stylistic,
      angular.configs.tsRecommended,
    ],
    processor: angular.processInlineTemplates,
    rules: {
      \\"@angular-eslint/directive-selector\\": [
        \\"error\\",
        {
          type: \\"attribute\\",
          prefix: \\"app\\",
          style: \\"camelCase\\",
        },
      ],
      \\"@angular-eslint/component-selector\\": [
        \\"error\\",
        {
          type: \\"element\\",
          prefix: \\"app\\",
          style: \\"kebab-case\\",
        },
      ],
    },
  },
  {
    files: [\\"**/*.html\\"],
    extends: [
      angular.configs.templateRecommended,
      angular.configs.templateAccessibility,
    ],
    rules: {},
  }
]  ,prettier
);
"
`;

exports[`ng-add.schematic should work with ESLint flat config files (library) 1`] = `
"// @ts-check
const eslint = require(\\"@eslint/js\\");
const { defineConfig } = require(\\"eslint/config\\");
const tseslint = require(\\"typescript-eslint\\");
const angular = require(\\"angular-eslint\\");
const prettier = require(\\"eslint-config-prettier/flat\\");

module.exports = defineConfig([
  {
    files: [\\"**/*.ts\\"],
    extends: [
      eslint.configs.recommended,
      tseslint.configs.recommended,
      tseslint.configs.stylistic,
      angular.configs.tsRecommended,
    ],
    processor: angular.processInlineTemplates,
    rules: {},
  },
  {
    files: [\\"**/*.html\\"],
    extends: [
      angular.configs.templateRecommended,
      angular.configs.templateAccessibility,
    ],
    rules: {},
  }
]  ,prettier
);
"
`;
